Filter out origins that definitely don't have uncommitted localstorage data.

LocalStorageContext::GetStorageUsage needs to include origins with
uncommitted data to ensure those can be cleared, but the logic used to
decide which origins to include was a bit too liberal, often including
origins where we know for sure no data actually exists for that origin.
That then lead to confusion when the UI might make it seem like storage
isn't being cleared correctly. This should fix that confusion.

Bug: 679344
Change-Id: Id84ade9752beb0e874b6823c0a9783b22b23aabd